[tool.poetry]
name = "libpythonpro"
version = "0.1.0"
description = ""
authors = ["Luiz Fernando <luiz-fernando@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
idna = "3.6"
iniconfig = "2.0.0"
mccabe = "0.7.0"
packaging = "24.0"
pluggy = "1.4.0"
pycodestyle = "2.11.1"
pyflakes = "3.2.0"
requests = "2.31.0"
urllib3 = "2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
